syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
}

message SendMessageRequest {
  string sender_id = 1;
  string recipient_id = 2;
  string content = 3;
}

message SendMessageResponse {
  bool success = 1;
  string message = 2;
  optional string error = 3;
}

message GetMessagesRequest {
  string user_id = 1;
  string other_user_id = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
  optional string error = 2;
}

message Message {
  string sender_id = 1;
  string content = 2;
  string timestamp = 3;
}